fix player control covering bottom song

--- a/styles/sass/playlist-window/_core.scss
+++ b/styles/sass/playlist-window/_core.scss
@@ -1,5 +1,6 @@
 .playlist-window {
   height: 100%;
+  padding-bottom: 75px;
   overflow: scroll;
   -ms-overflow-style: none;
   scrollbar-width: none;
